--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-# Build
-hello
-build
-
 # IDEs
 .idea
 .vscode
+
+#Added by cargo
+#
+#already existing elements are commented out
+
+/target
+**/*.rs.bk
