--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+# todo tests https://doc.rust-lang.org/rust-by-example/cargo/test.html
+# todo build scripts https://doc.rust-lang.org/rust-by-example/cargo/build_scripts.html
